Initial work to make enabling and disabling of documentation (on a project basis) in the correct dialog (Project Options...)

--- a/parts/doctreeview/doctreeprojectconfigwidgetbase.ui
+++ b/parts/doctreeview/doctreeprojectconfigwidgetbase.ui
@@ -19,7 +19,7 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-        <widget class="QLabel" row="0" column="0">
+        <widget class="QLabel" row="0" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>projectdocdirLabel</cstring>
             </property>
@@ -27,29 +27,12 @@
                 <string>Location of project user documentation:</string>
             </property>
         </widget>
-        <widget class="KURLRequester" row="3" column="0">
+        <widget class="KURLRequester" row="3" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>apidocdirEdit</cstring>
             </property>
         </widget>
-        <spacer row="4" column="0">
-            <property name="name">
-                <cstring>spacer1</cstring>
-            </property>
-            <property name="orientation">
-                <enum>Vertical</enum>
-            </property>
-            <property name="sizeType">
-                <enum>Expanding</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>21</width>
-                    <height>125</height>
-                </size>
-            </property>
-        </spacer>
-        <widget class="QLabel" row="2" column="0">
+        <widget class="QLabel" row="2" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>userdocdirLabel</cstring>
             </property>
@@ -57,13 +40,65 @@
                 <string>Location of project API documentation:</string>
             </property>
         </widget>
-        <widget class="KURLRequester" row="1" column="0">
+        <widget class="KURLRequester" row="1" column="0" rowspan="1" colspan="2">
             <property name="name">
                 <cstring>userdocdirEdit</cstring>
             </property>
         </widget>
+        <widget class="QLabel" row="4" column="0" rowspan="1" colspan="2">
+            <property name="name">
+                <cstring>displayedDocsLabel</cstring>
+            </property>
+            <property name="text">
+                <string>Displayed documents in documentation browser:</string>
+            </property>
+        </widget>
+        <widget class="KListView" row="5" column="0" rowspan="2" colspan="1">
+            <property name="name">
+                <cstring>docListView</cstring>
+            </property>
+            <property name="minimumSize">
+                <size>
+                    <width>320</width>
+                    <height>260</height>
+                </size>
+            </property>
+            <property name="focusPolicy">
+                <enum>WheelFocus</enum>
+            </property>
+            <property name="whatsThis" stdset="0">
+                <string>This table shows all the globaly installed documentation. Use the enable and disable buttons to control the use of each documentation item in the current project. To add or remove documentation to this list, use Settings-&gt;Configure Gideon...-&gt;Documentation Tree</string>
+            </property>
+        </widget>
+        <widget class="QPushButton" row="5" column="1">
+            <property name="name">
+                <cstring>EnableButton</cstring>
+            </property>
+            <property name="enabled">
+                <bool>true</bool>
+            </property>
+            <property name="text">
+                <string>Enable</string>
+            </property>
+        </widget>
+        <widget class="QPushButton" row="6" column="1">
+            <property name="name">
+                <cstring>DisableButton</cstring>
+            </property>
+            <property name="enabled">
+                <bool>true</bool>
+            </property>
+            <property name="text">
+                <string>Disable</string>
+            </property>
+        </widget>
     </grid>
 </widget>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
+<layoutdefaults spacing="6" margin="11"/>
+<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 <includehints>
     <includehint>kurlrequester.h</includehint>
     <includehint>klineedit.h</includehint>
@@ -71,12 +106,6 @@
     <includehint>kurlrequester.h</includehint>
     <includehint>klineedit.h</includehint>
     <includehint>kpushbutton.h</includehint>
+    <includehint>klistview.h</includehint>
 </includehints>
-<includes>
-    <include location="global" impldecl="in implementation">kdialog.h</include>
-</includes>
-<layoutdefaults spacing="6" margin="11"/>
-<layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
-
 </UI>
-
