Adds missing connections from Move Up/Down buttons in the Library Paths settings tab to their corresponding slots. Also disables sorting for this listview.
Patch by: Andreas Koepfle (koepfle in ti.uni-mannheim.de)
I think we should give him a CVS account!

--- a/parts/trollproject/projectconfigurationdlgbase.ui
+++ b/parts/trollproject/projectconfigurationdlgbase.ui
@@ -1821,6 +1821,18 @@
         <receiver>ProjectConfigurationDlgBase</receiver>
         <slot>extMoveDown_button_clicked()</slot>
     </connection>
+    <connection>
+        <sender>outsideLibDirMoveUpBtn</sender>
+        <signal>clicked()</signal>
+        <receiver>ProjectConfigurationDlgBase</receiver>
+        <slot>outsideLibDirMoveUpClicked()</slot>
+    </connection>
+    <connection>
+        <sender>outsideLibDirMoveDownBtn</sender>
+        <signal>clicked()</signal>
+        <receiver>ProjectConfigurationDlgBase</receiver>
+        <slot>outsideLibDirMoveDownClicked()</slot>
+    </connection>
 </connections>
 <tabstops>
     <tabstop>radioApplication</tabstop>
