--- a/parts/debugger/debuggerconfigwidgetbase.ui
+++ b/parts/debugger/debuggerconfigwidgetbase.ui
@@ -9,60 +9,12 @@
             <x>0</x>
             <y>0</y>
             <width>557</width>
-            <height>372</height>
+            <height>374</height>
         </rect>
     </property>
     <property name="caption">
         <string>Debugger Configuration</string>
     </property>
-    <widget class="QLineEdit">
-        <property name="name">
-            <cstring>programArgs_edit</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>139</x>
-                <y>4</y>
-                <width>390</width>
-                <height>22</height>
-            </rect>
-        </property>
-    </widget>
-    <widget class="QLabel">
-        <property name="name">
-            <cstring>programArgs_label</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>10</y>
-                <width>121</width>
-                <height>20</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Program &amp;arguments:</string>
-        </property>
-        <property name="buddy" stdset="0">
-            <cstring>programArgs_edit</cstring>
-        </property>
-        <property name="whatsThis" stdset="0">
-            <string>Arguments that are given to the application when it is debugged.</string>
-        </property>
-    </widget>
-    <widget class="QLineEdit">
-        <property name="name">
-            <cstring>debuggingShell_edit</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>140</x>
-                <y>30</y>
-                <width>390</width>
-                <height>22</height>
-            </rect>
-        </property>
-    </widget>
     <widget class="QLineEdit">
         <property name="name">
             <cstring>gdbPath_edit</cstring>
@@ -149,22 +101,6 @@
             <property name="buddy" stdset="0">
                 <cstring>programArgs_edit</cstring>
             </property>
-            <property name="whatsThis" stdset="0">
-                <string>Arguments that are given to the application when it is debugged.</string>
-            </property>
-        </widget>
-        <widget class="QLineEdit">
-            <property name="name">
-                <cstring>runShellScript_edit</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>140</x>
-                    <y>50</y>
-                    <width>360</width>
-                    <height>22</height>
-                </rect>
-            </property>
         </widget>
         <widget class="QLineEdit">
             <property name="name">
@@ -177,6 +113,9 @@
                     <width>360</width>
                     <height>22</height>
                 </rect>
+            </property>
+            <property name="toolTip" stdset="0">
+                <string></string>
             </property>
         </widget>
         <widget class="QLineEdit">
@@ -191,26 +130,40 @@
                     <height>22</height>
                 </rect>
             </property>
+            <property name="toolTip" stdset="0">
+                <string>Script to connect with remote application</string>
+            </property>
+            <property name="whatsThis" stdset="0">
+                <string>This script is intended for the actual commands needed to connect to a remotely running executable.
+	shell sleep 5	wait for remote program to start
+	target remote ...	connect to the remote debugger
+	continue	[optional] run debugging two first breakpoint.</string>
+            </property>
         </widget>
-    </widget>
-    <widget class="QLabel">
-        <property name="name">
-            <cstring>debuggingShell_label</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>30</y>
-                <width>100</width>
-                <height>20</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Debugging &amp;shell:</string>
-        </property>
-        <property name="buddy" stdset="0">
-            <cstring>debuggingShell_edit</cstring>
-        </property>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>runShellScript_edit</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>140</x>
+                    <y>50</y>
+                    <width>360</width>
+                    <height>22</height>
+                </rect>
+            </property>
+            <property name="toolTip" stdset="0">
+                <string>Script to start remote application</string>
+            </property>
+            <property name="whatsThis" stdset="0">
+                <string>When debugging remotely this script is intended to actually start the remote process.
+[It is expected that the debug executable can be reached on the target, maybe by downloading it as a final build step]
+1) Find a way to execute a command remotely - rsh, ssh, telnet, ...
+2a) Execute "gdbserver ... application" on target.
+or if your executable contains the gdb stub
+2b) Execute "application" on target.</string>
+            </property>
+        </widget>
     </widget>
     <widget class="QLabel">
         <property name="name">
@@ -229,33 +182,6 @@
         </property>
         <property name="buddy" stdset="0">
             <cstring>gdbPath_edit</cstring>
-        </property>
-    </widget>
-    <widget class="QCheckBox">
-        <property name="name">
-            <cstring>displayStaticMembers_box</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>110</y>
-                <width>360</width>
-                <height>19</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Display static &amp;members</string>
-        </property>
-        <property name="accel">
-            <string>Alt+M</string>
-        </property>
-        <property name="whatsThis" stdset="0">
-            <string>Displaying static members makes GDB slower in
-producing data within KDE and Qt.
-It may change the "signature" of the data
-which QString and friends rely on,
-but if you need to debug into these values then
-check this option.</string>
         </property>
     </widget>
     <widget class="QCheckBox">
@@ -437,6 +363,103 @@ Otherwise leave it unchecked.</string>
             </rect>
         </property>
     </spacer>
+    <widget class="QLabel">
+        <property name="name">
+            <cstring>debuggingShell_label</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>30</y>
+                <width>100</width>
+                <height>20</height>
+            </rect>
+        </property>
+        <property name="text">
+            <string>Debugging &amp;shell:</string>
+        </property>
+        <property name="buddy" stdset="0">
+            <cstring>debuggingShell_edit</cstring>
+        </property>
+    </widget>
+    <widget class="QLineEdit">
+        <property name="name">
+            <cstring>debuggingShell_edit</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>140</x>
+                <y>30</y>
+                <width>390</width>
+                <height>22</height>
+            </rect>
+        </property>
+    </widget>
+    <widget class="QLabel">
+        <property name="name">
+            <cstring>programArgs_label</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>10</y>
+                <width>121</width>
+                <height>20</height>
+            </rect>
+        </property>
+        <property name="text">
+            <string>Program &amp;arguments:</string>
+        </property>
+        <property name="buddy" stdset="0">
+            <cstring>programArgs_edit</cstring>
+        </property>
+        <property name="whatsThis" stdset="0">
+            <string>Arguments that are given to the application when it is debugged.</string>
+        </property>
+    </widget>
+    <widget class="QCheckBox">
+        <property name="name">
+            <cstring>displayStaticMembers_box</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>110</y>
+                <width>360</width>
+                <height>19</height>
+            </rect>
+        </property>
+        <property name="text">
+            <string>Display static &amp;members</string>
+        </property>
+        <property name="accel">
+            <string>Alt+M</string>
+        </property>
+        <property name="whatsThis" stdset="0">
+            <string>Displaying static members makes GDB slower in
+producing data within KDE and Qt.
+It may change the "signature" of the data
+which QString and friends rely on,
+but if you need to debug into these values then
+check this option.</string>
+        </property>
+    </widget>
+    <widget class="QLineEdit">
+        <property name="name">
+            <cstring>programArgs_edit</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>139</x>
+                <y>4</y>
+                <width>390</width>
+                <height>22</height>
+            </rect>
+        </property>
+        <property name="text">
+            <string></string>
+        </property>
+    </widget>
 </widget>
 <includes>
     <include location="global" impldecl="in implementation">kdialog.h</include>
