--- a/parts/debugger/debuggerconfigwidgetbase.ui
+++ b/parts/debugger/debuggerconfigwidgetbase.ui
@@ -120,28 +120,6 @@
         </widget>
         <widget class="QLineEdit">
             <property name="name">
-                <cstring>runGdbScript_edit</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>140</x>
-                    <y>80</y>
-                    <width>360</width>
-                    <height>22</height>
-                </rect>
-            </property>
-            <property name="toolTip" stdset="0">
-                <string>Script to connect with remote application</string>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>This script is intended for the actual commands needed to connect to a remotely running executable.
-	shell sleep 5	wait for remote program to start
-	target remote ...	connect to the remote debugger
-	continue	[optional] run debugging two first breakpoint.</string>
-            </property>
-        </widget>
-        <widget class="QLineEdit">
-            <property name="name">
                 <cstring>runShellScript_edit</cstring>
             </property>
             <property name="geometry">
@@ -162,6 +140,28 @@
 2a) Execute "gdbserver ... application" on target.
 or if your executable contains the gdb stub
 2b) Execute "application" on target.</string>
+            </property>
+        </widget>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>runGdbScript_edit</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>140</x>
+                    <y>80</y>
+                    <width>360</width>
+                    <height>22</height>
+                </rect>
+            </property>
+            <property name="toolTip" stdset="0">
+                <string>Script to connect with remote application</string>
+            </property>
+            <property name="whatsThis" stdset="0">
+                <string>This script is intended for the actual commands needed to connect to a remotely running executable.
+	shell sleep 5	wait for remote program to start
+	target remote ...	connect to the remote debugger
+	continue	[optional] run debugging to the first breakpoint.</string>
             </property>
         </widget>
     </widget>
@@ -417,6 +417,22 @@ Otherwise leave it unchecked.</string>
             <string>Arguments that are given to the application when it is debugged.</string>
         </property>
     </widget>
+    <widget class="QLineEdit">
+        <property name="name">
+            <cstring>programArgs_edit</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>139</x>
+                <y>4</y>
+                <width>390</width>
+                <height>22</height>
+            </rect>
+        </property>
+        <property name="text">
+            <string></string>
+        </property>
+    </widget>
     <widget class="QCheckBox">
         <property name="name">
             <cstring>displayStaticMembers_box</cstring>
@@ -442,22 +458,6 @@ It may change the "signature" of the data
 which QString and friends rely on,
 but if you need to debug into these values then
 check this option.</string>
-        </property>
-    </widget>
-    <widget class="QLineEdit">
-        <property name="name">
-            <cstring>programArgs_edit</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>139</x>
-                <y>4</y>
-                <width>390</width>
-                <height>22</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string></string>
         </property>
     </widget>
 </widget>
