--- a/parts/debugger/debuggerconfigwidgetbase.ui
+++ b/parts/debugger/debuggerconfigwidgetbase.ui
@@ -28,143 +28,6 @@
             </rect>
         </property>
     </widget>
-    <widget class="QGroupBox">
-        <property name="name">
-            <cstring>groupBox1</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>230</y>
-                <width>530</width>
-                <height>120</height>
-            </rect>
-        </property>
-        <property name="title">
-            <string>Remote debugging</string>
-        </property>
-        <widget class="QLabel">
-            <property name="name">
-                <cstring>runGdbScript_label</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>20</x>
-                    <y>80</y>
-                    <width>110</width>
-                    <height>22</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>Run gdb script:</string>
-                <comment>Gdb script to be executed at run time.</comment>
-            </property>
-            <property name="buddy" stdset="0">
-                <cstring>gdbPath_edit</cstring>
-            </property>
-        </widget>
-        <widget class="QLabel">
-            <property name="name">
-                <cstring>runShellScript_label</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>20</x>
-                    <y>50</y>
-                    <width>110</width>
-                    <height>22</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>Run shell script:</string>
-                <comment>Shell script to be executed at run time</comment>
-            </property>
-            <property name="buddy" stdset="0">
-                <cstring>debuggingShell_edit</cstring>
-            </property>
-        </widget>
-        <widget class="QLabel">
-            <property name="name">
-                <cstring>configGdbScript_label</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>20</x>
-                    <y>20</y>
-                    <width>110</width>
-                    <height>22</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>Config gdb script:</string>
-            </property>
-            <property name="buddy" stdset="0">
-                <cstring>programArgs_edit</cstring>
-            </property>
-        </widget>
-        <widget class="QLineEdit">
-            <property name="name">
-                <cstring>configGdbScript_edit</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>140</x>
-                    <y>20</y>
-                    <width>360</width>
-                    <height>22</height>
-                </rect>
-            </property>
-            <property name="toolTip" stdset="0">
-                <string></string>
-            </property>
-        </widget>
-        <widget class="QLineEdit">
-            <property name="name">
-                <cstring>runShellScript_edit</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>140</x>
-                    <y>50</y>
-                    <width>360</width>
-                    <height>22</height>
-                </rect>
-            </property>
-            <property name="toolTip" stdset="0">
-                <string>Script to start remote application</string>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>When debugging remotely this script is intended to actually start the remote process.
-[It is expected that the debug executable can be reached on the target, maybe by downloading it as a final build step]
-1) Find a way to execute a command remotely - rsh, ssh, telnet, ...
-2a) Execute "gdbserver ... application" on target.
-or if your executable contains the gdb stub
-2b) Execute "application" on target.</string>
-            </property>
-        </widget>
-        <widget class="QLineEdit">
-            <property name="name">
-                <cstring>runGdbScript_edit</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>140</x>
-                    <y>80</y>
-                    <width>360</width>
-                    <height>22</height>
-                </rect>
-            </property>
-            <property name="toolTip" stdset="0">
-                <string>Script to connect with remote application</string>
-            </property>
-            <property name="whatsThis" stdset="0">
-                <string>This script is intended for the actual commands needed to connect to a remotely running executable.
-	shell sleep 5	wait for remote program to start
-	target remote ...	connect to the remote debugger
-	continue	[optional] run debugging to the first breakpoint.</string>
-            </property>
-        </widget>
-    </widget>
     <widget class="QLabel">
         <property name="name">
             <cstring>gdbPath_label</cstring>
@@ -182,110 +45,6 @@ or if your executable contains the gdb stub
         </property>
         <property name="buddy" stdset="0">
             <cstring>gdbPath_edit</cstring>
-        </property>
-    </widget>
-    <widget class="QCheckBox">
-        <property name="name">
-            <cstring>asmDemangle_box</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>130</y>
-                <width>360</width>
-                <height>19</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Display &amp;demangled names</string>
-        </property>
-        <property name="accel">
-            <string>Alt+D</string>
-        </property>
-        <property name="whatsThis" stdset="0">
-            <string>When displaying the disassembled code you
-can select to see the methods' mangled names.
-However, non-mangled names are easier to read.</string>
-        </property>
-    </widget>
-    <widget class="QCheckBox">
-        <property name="name">
-            <cstring>breakOnLoadingLibrary_box</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>150</y>
-                <width>360</width>
-                <height>19</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Try settings &amp;breakpoints on library loading</string>
-        </property>
-        <property name="accel">
-            <string>Alt+B</string>
-        </property>
-        <property name="whatsThis" stdset="0">
-            <string>If GDB hasn't seen a library that will be loaded via
-"dlopen" then it will refuse to set a breakpoint in that code.
-We can get GDB to stop on a library load and hence
-try to set the pending breakpoints. See the documentation
-for more details and a "gotcha" relating to this behavior.
-
-If you are not "dlopen"ing libs then leave this unchecked.</string>
-        </property>
-    </widget>
-    <widget class="QCheckBox">
-        <property name="name">
-            <cstring>enableFloatingToolBar_box</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>170</y>
-                <width>360</width>
-                <height>19</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Enable &amp;floating toolbar</string>
-        </property>
-        <property name="accel">
-            <string>Alt+F</string>
-        </property>
-        <property name="whatsThis" stdset="0">
-            <string>Use the floating toolbar. This toolbar always stays
-on top of all windows so that if the app covers KDevelop
-you have control of the app through the small toolbar. It
-can also be docked into the panel.
-
-This toolbar is in addition to the toolbar in KDevelop.</string>
-        </property>
-    </widget>
-    <widget class="QCheckBox">
-        <property name="name">
-            <cstring>dbgTerminal_box</cstring>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>10</x>
-                <y>190</y>
-                <width>360</width>
-                <height>19</height>
-            </rect>
-        </property>
-        <property name="text">
-            <string>Enable separate &amp;terminal for application IO</string>
-        </property>
-        <property name="accel">
-            <string>Alt+T</string>
-        </property>
-        <property name="whatsThis" stdset="0">
-            <string>This allows you to enter terminal input when your
-application contains terminal input code (e.g. cin, fgets, etc.).
-If you use terminal input in your application then check this option.
-Otherwise leave it unchecked.</string>
         </property>
     </widget>
     <spacer>
@@ -435,6 +194,219 @@ Otherwise leave it unchecked.</string>
     </widget>
     <widget class="QCheckBox">
         <property name="name">
+            <cstring>dbgTerminal_box</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>190</y>
+                <width>360</width>
+                <height>19</height>
+            </rect>
+        </property>
+        <property name="text">
+            <string>Enable separate &amp;terminal for application IO</string>
+        </property>
+        <property name="accel">
+            <string>Alt+T</string>
+        </property>
+        <property name="whatsThis" stdset="0">
+            <string>This allows you to enter terminal input when your
+application contains terminal input code (e.g. cin, fgets, etc.).
+If you use terminal input in your application then check this option.
+Otherwise leave it unchecked.</string>
+        </property>
+    </widget>
+    <widget class="QCheckBox">
+        <property name="name">
+            <cstring>enableFloatingToolBar_box</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>170</y>
+                <width>360</width>
+                <height>19</height>
+            </rect>
+        </property>
+        <property name="text">
+            <string>Enable &amp;floating toolbar</string>
+        </property>
+        <property name="accel">
+            <string>Alt+F</string>
+        </property>
+        <property name="whatsThis" stdset="0">
+            <string>Use the floating toolbar. This toolbar always stays
+on top of all windows so that if the app covers KDevelop
+you have control of the app through the small toolbar. It
+can also be docked into the panel.
+
+This toolbar is in addition to the toolbar in KDevelop.</string>
+        </property>
+    </widget>
+    <widget class="QGroupBox">
+        <property name="name">
+            <cstring>groupBox1</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>230</y>
+                <width>530</width>
+                <height>120</height>
+            </rect>
+        </property>
+        <property name="title">
+            <string>Remote debugging</string>
+        </property>
+        <widget class="QLabel">
+            <property name="name">
+                <cstring>runShellScript_label</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>20</x>
+                    <y>50</y>
+                    <width>110</width>
+                    <height>22</height>
+                </rect>
+            </property>
+            <property name="text">
+                <string>Run shell script:</string>
+                <comment>Shell script to be executed at run time</comment>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>debuggingShell_edit</cstring>
+            </property>
+        </widget>
+        <widget class="QLabel">
+            <property name="name">
+                <cstring>configGdbScript_label</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>20</x>
+                    <y>20</y>
+                    <width>110</width>
+                    <height>22</height>
+                </rect>
+            </property>
+            <property name="text">
+                <string>Config gdb script:</string>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>programArgs_edit</cstring>
+            </property>
+        </widget>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>configGdbScript_edit</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>140</x>
+                    <y>20</y>
+                    <width>360</width>
+                    <height>22</height>
+                </rect>
+            </property>
+            <property name="toolTip" stdset="0">
+                <string></string>
+            </property>
+        </widget>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>runShellScript_edit</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>140</x>
+                    <y>50</y>
+                    <width>360</width>
+                    <height>22</height>
+                </rect>
+            </property>
+            <property name="toolTip" stdset="0">
+                <string>Script to start remote application</string>
+            </property>
+            <property name="whatsThis" stdset="0">
+                <string>When debugging remotely this script is intended to actually start the remote process.
+[It is expected that the debug executable can be reached on the target, maybe by downloading it as a final build step]
+1) Find a way to execute a command remotely - rsh, ssh, telnet, ...
+2a) Execute "gdbserver ... application" on target.
+or if your executable contains the gdb stub
+2b) Execute "application" on target.</string>
+            </property>
+        </widget>
+        <widget class="QLineEdit">
+            <property name="name">
+                <cstring>runGdbScript_edit</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>140</x>
+                    <y>80</y>
+                    <width>360</width>
+                    <height>22</height>
+                </rect>
+            </property>
+            <property name="toolTip" stdset="0">
+                <string>Script to connect with remote application</string>
+            </property>
+            <property name="whatsThis" stdset="0">
+                <string>This script is intended for the actual commands needed to connect to a remotely running executable.
+	shell sleep 5	wait for remote program to start
+	target remote ...	connect to the remote debugger
+	continue	[optional] run debugging to the first breakpoint.</string>
+            </property>
+        </widget>
+        <widget class="QLabel">
+            <property name="name">
+                <cstring>runGdbScript_label</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>20</x>
+                    <y>80</y>
+                    <width>110</width>
+                    <height>22</height>
+                </rect>
+            </property>
+            <property name="text">
+                <string>Run gdb script:</string>
+                <comment>Gdb script to be executed at run time.</comment>
+            </property>
+            <property name="buddy" stdset="0">
+                <cstring>gdbPath_edit</cstring>
+            </property>
+        </widget>
+    </widget>
+    <widget class="QCheckBox">
+        <property name="name">
+            <cstring>asmDemangle_box</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>130</y>
+                <width>360</width>
+                <height>19</height>
+            </rect>
+        </property>
+        <property name="text">
+            <string>Display &amp;demangled names</string>
+        </property>
+        <property name="accel">
+            <string>Alt+D</string>
+        </property>
+        <property name="whatsThis" stdset="0">
+            <string>When displaying the disassembled code you
+can select to see the methods' mangled names.
+However, non-mangled names are easier to read.</string>
+        </property>
+    </widget>
+    <widget class="QCheckBox">
+        <property name="name">
             <cstring>displayStaticMembers_box</cstring>
         </property>
         <property name="geometry">
@@ -458,6 +430,34 @@ It may change the "signature" of the data
 which QString and friends rely on,
 but if you need to debug into these values then
 check this option.</string>
+        </property>
+    </widget>
+    <widget class="QCheckBox">
+        <property name="name">
+            <cstring>breakOnLoadingLibrary_box</cstring>
+        </property>
+        <property name="geometry">
+            <rect>
+                <x>10</x>
+                <y>150</y>
+                <width>360</width>
+                <height>19</height>
+            </rect>
+        </property>
+        <property name="text">
+            <string>Try settings &amp;breakpoints on library loading</string>
+        </property>
+        <property name="accel">
+            <string>Alt+B</string>
+        </property>
+        <property name="whatsThis" stdset="0">
+            <string>If GDB hasn't seen a library that will be loaded via
+"dlopen" then it will refuse to set a breakpoint in that code.
+We can get GDB to stop on a library load and hence
+try to set the pending breakpoints. See the documentation
+for more details relating to this behavior.
+
+If you are not "dlopen"ing libs then leave this unchecked.</string>
         </property>
     </widget>
 </widget>
